--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,14 @@
 {
+  "name": "nimc-backend",
+  "version": "1.0.0",
   "scripts": {
-    "test": "jest --verbose",
-    "test:watch": "jest --watch",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo 'No tests yet' && exit 0"
   },
-  "devDependencies": {
-    "jest": "^29.6.1",
-    "supertest": "^6.3.3",
-    "eslint": "^8.45.0"
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "pg": "^8.11.3"
   }
 }
