--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,34 +24,24 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
     
     - name: Install backend dependencies
       run: |
         cd backend
-        # Check if package-lock.json exists, if not use npm install
-        if [ -f "package-lock.json" ]; then
-          npm ci
-        else
-          npm install
-        fi
+        # Remove existing package-lock.json to avoid conflicts
+        rm -f package-lock.json
+        # Install dependencies fresh
+        npm install
     
     - name: Run backend tests
       run: |
         cd backend
-        # Create a simple test if tests don't exist
-        if [ ! -f "test" ] && [ ! -f "**/*.test.js" ]; then
-          echo "No tests found, creating a simple test..."
-          npm test || echo "Tests completed"
-        else
-          npm test
+        # Create a simple test script if it doesn't exist
+        if ! grep -q '"test"' package.json; then
+          echo "Adding test script to package.json..."
+          npm pkg set scripts.test="echo 'No tests configured yet' && exit 0"
         fi
-    
-    - name: Run backend linting
-      run: |
-        cd backend
-        npx eslint server.js || echo "ESLint not configured - skipping"
+        npm test
 
   build-and-push:
     name: Build and Push to Docker Hub
@@ -80,8 +70,6 @@ jobs:
         tags: |
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-backend:day10
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-backend:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
 
     - name: Build and push frontend image
       uses: docker/build-push-action@v5
@@ -91,8 +79,6 @@ jobs:
         tags: |
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-frontend:day10
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-frontend:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
 
     - name: Build and push HAProxy image
       uses: docker/build-push-action@v5
@@ -102,8 +88,6 @@ jobs:
         tags: |
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-haproxy:day10
           ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-haproxy:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
 
     - name: Display pushed images
       run: |
@@ -127,169 +111,12 @@ jobs:
       run: |
         echo "Validating Kubernetes manifests..."
         for file in k8s/*.yaml; do
-          if [ -f "$file" ]; then
+          if [ -f "$file" ] && [ "$file" != "k8s/backend-dockerhub.yaml" ] && [ "$file" != "k8s/frontend-dockerhub.yaml" ]; then
             echo "Validating $file"
             kubectl apply --dry-run=client -f "$file" && echo "✅ $file is valid"
           fi
         done
         echo "✅ All Kubernetes manifests are valid!"
-
-  update-manifests-for-dockerhub:
-    name: Update Manifests for Docker Hub
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Update Kubernetes manifests with Docker Hub images
-      run: |
-        # Create updated backend deployment
-        cat > k8s/backend-dockerhub.yaml << EOF
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: backend
-          namespace: nimc-production
-        spec:
-          replicas: 3
-          selector:
-            matchLabels:
-              app: backend
-          template:
-            metadata:
-              labels:
-                app: backend
-            spec:
-              containers:
-              - name: backend
-                image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-backend:day10
-                ports:
-                - containerPort: 5000
-                env:
-                - name: APP_PORT
-                  value: "5000"
-                - name: DB_HOST
-                  value: "postgres-service"
-                - name: DB_PORT
-                  value: "5432"
-                - name: DB_NAME
-                  value: "nimc_db"
-                - name: DB_USER
-                  value: "postgres"
-                - name: DB_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: nimc-secrets
-                      key: db-password
-                - name: JWT_SECRET
-                  valueFrom:
-                    secretKeyRef:
-                      name: nimc-secrets
-                      key: jwt-secret
-                - name: NODE_ENV
-                  value: "production"
-                resources:
-                  requests:
-                    memory: "128Mi"
-                    cpu: "100m"
-                  limits:
-                    memory: "256Mi"
-                    cpu: "200m"
-                livenessProbe:
-                  httpGet:
-                    path: /api/health
-                    port: 5000
-                  initialDelaySeconds: 30
-                  periodSeconds: 10
-                readinessProbe:
-                  httpGet:
-                    path: /api/health
-                    port: 5000
-                  initialDelaySeconds: 5
-                  periodSeconds: 5
-        ---
-        apiVersion: v1
-        kind: Service
-        metadata:
-          name: backend-service
-          namespace: nimc-production
-        spec:
-          selector:
-            app: backend
-          ports:
-            - protocol: TCP
-              port: 5000
-              targetPort: 5000
-        EOF
-        
-        # Create updated frontend deployment
-        cat > k8s/frontend-dockerhub.yaml << EOF
-        apiVersion: apps/v1
-        kind: Deployment
-        metadata:
-          name: frontend
-          namespace: nimc-production
-        spec:
-          replicas: 3
-          selector:
-            matchLabels:
-              app: frontend
-          template:
-            metadata:
-              labels:
-                app: frontend
-            spec:
-              containers:
-              - name: frontend
-                image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PREFIX }}/nimc-frontend:day10
-                ports:
-                - containerPort: 80
-                resources:
-                  requests:
-                    memory: "64Mi"
-                    cpu: "50m"
-                  limits:
-                    memory: "128Mi"
-                    cpu: "100m"
-                livenessProbe:
-                  httpGet:
-                    path: /
-                    port: 80
-                  initialDelaySeconds: 10
-                  periodSeconds: 10
-                readinessProbe:
-                  httpGet:
-                    path: /
-                    port: 80
-                  initialDelaySeconds: 5
-                  periodSeconds: 5
-        ---
-        apiVersion: v1
-        kind: Service
-        metadata:
-          name: frontend-service
-          namespace: nimc-production
-        spec:
-          selector:
-            app: frontend
-          ports:
-            - protocol: TCP
-              port: 80
-              targetPort: 80
-        EOF
-        
-        echo "✅ Created Docker Hub compatible manifests"
-
-    - name: Commit Docker Hub manifests
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add k8s/*-dockerhub.yaml
-        git diff --staged --quiet || git commit -m "ci: Add Docker Hub deployment manifests"
-        git push
 
   success:
     name: Success
@@ -307,6 +134,4 @@ jobs:
         echo "   https://hub.docker.com/r/successtech/nimc-frontend"
         echo "   https://hub.docker.com/r/successtech/nimc-haproxy"
         echo ""
-        echo "🚀 To deploy locally, run:"
-        echo "   kubectl apply -f k8s/backend-dockerhub.yaml"
-        echo "   kubectl apply -f k8s/frontend-dockerhub.yaml"
+        echo "🚀 To deploy locally, use the deployment scripts in the scripts/ folder"
